# tinydew

./: .clippy.toml  Cargo.toml  DEVELOPMENT.md  Makefile  OPENCLAW_INSTALL.md  PianoKeyboard.md  README.md  TASK05_STATUS.md  rustfmt.toml  tinydew_save.json
.openclaw/: workspace-state.json
agents/: AGENTS.md  FEATURES.md  auto-sleep.spec.md  block-key-sound.spec.md  brew-tap.spec.md  ci.spec.md  clear.spec.md  cli.spec.md  constitution.md  crops.spec.md  day-night.spec.md  east-path.spec.md  economy-and-items.spec.md  entities-and-movement.spec.md  farm-piano.spec.md  farm.spec.md  fishing.plan.md  fishing.spec.md  flower.spec.md  four-specs-implementation.plan.md  game-emoji-map.spec.md  git.md  greeting-text.spec.md  grow.spec.md  guest-girl-interactive-mode.plan.md  guest-girl-interactive-mode.spec.md  guest-piano-play.spec.md  harvest.spec.md  heartbeat-daynight-autosleep-random-weather.implementation.plan.md  heartbeat.spec.md  initial-map.spec.md  interactive-mode.spec.md  inventory.spec.md  mcp-interface.spec.md  mcp.plan.md  mcp.spec.md  money.spec.md  move.spec.md  mushroom.spec.md  mvp.plan.md  (+31 more)
crontab/: 2026-04-02-push-engineering.md
docs/: OPENCLAW_INSTALL.md  mcp.md  tinydew-for-openclaw.SKILL.md
files/: A3v8.flac  A4v8.flac  A5v8.flac  C3v8.flac  C4v8.flac  C5v8.flac  F#3v8.flac  F#4v8.flac  F#5v8.flac
memory/: 2026-04-01.md
src/: action.rs  block_key.rs  cli.rs  db.rs  economy.rs  entity.rs  farming.rs  festival.rs  fishing.rs  grow.rs  lib.rs  main.rs  map.rs  movement.rs  piano.rs  savegame.rs  season.rs  sleep.rs  spawn.rs  state.rs  tile.rs  (+6 more)
(+66 files in other folders)
