[package]
name = "tinydew"
version = "0.1.0"
edition = "2024"

[features]
interactive = ["rodio", "once_cell"]
default = []

[dependencies]
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
rodio = { version = "0.21", optional = true }
once_cell = { version = "1.18", optional = true }

[dev-dependencies]
