[package]
name = "tinydew"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rodio = { version = "0.21", optional = true }
crossterm = { version = "0.28", optional = true }

[features]
default = []
interactive = ["rodio", "crossterm"]
