[package]
name = "tinydew"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
dirs = "5.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true

[lib]
name = "tinydew"
path = "src/lib.rs"
